--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "rap2hpoutre/laravel-log-viewer": "^0.5.3",
         "cviebrock/eloquent-sluggable": "^3.1",
         "intervention/image": "^2.3",
-        "spatie/laravel-medialibrary": "^4.3"
+        "spatie/laravel-medialibrary": "^4.3",
+        "spatie/laravel-analytics": "^2.1",
+        "kris/laravel-form-builder": "^1.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -61,5 +63,6 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+  "minimum-stability": "dev"
 }
