--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,40 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-
         "laravel/framework": "5.1.*",
+
         "laravelcollective/html": "5.1.*",
-        "cartalyst/sentinel": "2.0.*",
-        "mcamara/laravel-localization": "1.0.*",
         "barryvdh/laravel-debugbar": "2.2.*",
         "barryvdh/laravel-ide-helper": "^2.2",
-        "davejamesmiller/laravel-breadcrumbs": "3.0.*",
-        "sseffa/video-api": "2.0.*",
-        "laracasts/flash": "^1.3",
-        "rap2hpoutre/laravel-log-viewer": "^0.5.3",
+        "cartalyst/sentinel": "2.0.*",
         "cviebrock/eloquent-sluggable": "^3.1",
+        "davejamesmiller/laravel-breadcrumbs": "3.0.*",
+        "dflydev/apache-mime-types": "^1.0",
+        "doctrine/dbal": "~2.3",
+        "evercode1/view-maker": "^3.5",
+        "infyomlabs/adminlte-templates": "dev-master",
+        "infyomlabs/core-templates": "dev-master",
+        "infyomlabs/flatlab-templates": "dev-master",
+        "infyomlabs/generator-builder": "dev-master",
+        "infyomlabs/laravel-generator": "dev-master",
+        "infyomlabs/metronic-templates": "dev-master",
+        "infyomlabs/swagger-generator": "dev-master",
         "intervention/image": "^2.3",
-        "spatie/laravel-medialibrary": "^4.3",
-        "spatie/laravel-analytics": "^2.1",
-        "kris/laravel-form-builder": "^1.7"
+        "jlapp/swaggervel": "dev-master",
+        "kris/laravel-form-builder": "^1.7",
+        "laracasts/flash": "^2.0",
+
+        "mcamara/laravel-localization": "1.0.*",
+        "orangehill/iseed": "^2.1",
+        "patricktalmadge/bootstrapper": "^5.9",
+        "rap2hpoutre/laravel-log-viewer": "^0.5.3",
+
+        "sseffa/video-api": "2.0.*",
+        "webpatser/laravel-uuid": "^2.0",
+        "yajra/laravel-datatables-oracle": "~6.0",
+                "spatie/laravel-analytics": "^2.1",
+        "spatie/laravel-directory-cleanup": "^1.0",
+        "spatie/laravel-medialibrary": "^4.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -30,39 +48,23 @@
         "phpspec/phpspec": "~2.1"
     },
     "autoload": {
-        "classmap": [
-            "database"
-        ],
+        "classmap": ["database"],
         "psr-4": {
             "Fully\\": "app/"
         },
-        "files": [
-            "app/Helper/helpers.php"
-        ]
+        "files": ["app/Helper/helpers.php"]
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
+        "classmap": ["tests/TestCase.php"]
     },
     "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
-        ],
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ]
+        "post-root-package-install": ["php -r \"copy('.env.example', '.env');\""],
+        "post-create-project-cmd": ["php artisan key:generate"],
+        "post-install-cmd": ["php artisan clear-compiled", "php artisan optimize"],
+        "post-update-cmd": ["php artisan clear-compiled", "php artisan optimize"]
     },
     "config": {
         "preferred-install": "dist"
     },
-  "minimum-stability": "dev"
+    "minimum-stability": "dev"
 }
